version-23.2/manage/kubernetes/monitor.mdx
---
title: Monitor Redpanda in Kubernetes
linkRoot: ../../../
deployment: Kubernetes
contextLinks:
  - name: 'Linux'
    to: 'manage/monitoring'
  - name: 'Kubernetes'
    to: manage/kubernetes/monitor
description: Monitor the health of your system to predict issues and optimize performance.
---

<head>
  <meta name="title" content="Monitor Redpanda in Kubernetes | Redpanda Docs" />
  <meta
    name="description"
    content="Metrics to monitor the health of your system to predict issues and optimize performance."
  />
  <link rel="canonical" href="https://docs.redpanda.com/docs/manage/kubernetes/monitor/" />
</head>

import Aliases from "@site/docs/shared/_aliases.mdx";
import ContextLink from '@site/src/components/ContextButton.js'
import Intro from '../../manage/shared/monitoring/_intro.mdx'
import GenerateGrafanaDashboard from '../../manage/shared/monitoring/_grafana-dashboard.mdx'
import MonitoringExamples from '../../manage/shared/monitoring/_monitoring-examples.mdx'
import MonitorForPerformance from '../../manage/shared/monitoring/_monitor-for-performance.mdx'
import RedpandaArchitecture from '../../manage/shared/monitoring/_redpanda-architecture.mdx'
import InfrastructureResources from '../../manage/shared/monitoring/_infrastructure-resources.mdx'
import Throughput from '../../manage/shared/monitoring/_throughput.mdx'
import Latency from '../../manage/shared/monitoring/_latency.mdx'
import PartitionHealth from '../../manage/shared/monitoring/_partition-health.mdx'
import Consumers from '../../manage/shared/monitoring/_consumers.mdx'
import Services from '../../manage/shared/monitoring/_services.mdx'
import References from '../../manage/shared/monitoring/_references.mdx'
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

<ContextLink frontmatter={frontMatter}
/>

<Intro frontmatter={frontMatter}/>

## Configure Prometheus

[Prometheus](https://prometheus.io/) is a system monitoring and alerting tool. It collects and stores metrics as time-series data identified by a metric name and key/value pairs.

:::note
Redpanda recommends creating monitoring dashboards with `/public_metrics`.
:::

To configure Prometheus to monitor Redpanda metrics, you can use the [Prometheus Helm chart](https://github.com/prometheus-community/helm-charts/tree/main/charts/prometheus):

1. Add annotations to your Pods to allow the Prometheus Helm chart to find and scrape the `/public_metrics` endpoint:

  <Tabs groupId="kubernetes-tool">
  <TabItem value="operator" label="Helm + Operator">

  ```yaml title="redpanda-cluster.yaml"
  apiVersion: cluster.redpanda.com/v1alpha1
  kind: Redpanda
  metadata:
    name: redpanda
  spec:
    chartRef: {}
    clusterSpec:
      statefulset:
        annotations:
          "prometheus.io/scrape": "true"
          "prometheus.io/path": "public_metrics"
          "prometheus.io/port": "<admin-api-port>"
  ```

  ```bash
  kubectl apply -f redpanda-cluster.yaml --namespace <namespace>
  ```

  </TabItem>
  <TabItem value="helm" label="Helm">
  <Tabs groupId="helm-config" queryString>
  <TabItem value="values" label="--values">

  ```yaml title="prometheus-monitoring.yaml"
  statefulset:
    annotations:
      "prometheus.io/scrape": "true"
      "prometheus.io/path": "public_metrics"
      "prometheus.io/port": "<admin-api-port>"
  ```

  ```bash
  helm upgrade --install redpanda redpanda/redpanda --namespace <namespace> --create-namespace \
  --values prometheus-monitoring.yaml --reuse-values
  ```

  </TabItem>
  <TabItem value="flags" label="--set">

  ```bash
  helm upgrade --install redpanda redpanda/redpanda \
    --namespace <namespace> \
    --create-namespace \
    --set-string statefulset.annotations."prometheus\.io/scrape"="true",statefulset.annotations."prometheus\.io/path"=public_metrics,statefulset.annotations."prometheus\.io/port"="<admin-api-port>"
  ```

  </TabItem>
  </Tabs>
  </TabItem>
  </Tabs>

1. Wait until all Pods are running:

  ```bash
  kubectl --namespace <namespace> rollout status statefulset redpanda --watch
  ```

1. Install Prometheus:

  ```yaml
  helm repo add prometheus-community https://prometheus-community.github.io/helm-charts
  helm repo update
  helm install prometheus prometheus-community/prometheus --namespace monitoring --create-namespace
  ```

1. Expose the Prometheus server to your localhost:

  ```bash
  export POD_NAME=$(kubectl get pods --namespace monitoring -l "app=prometheus,component=server" -o jsonpath="{.items[0].metadata.name}")
  kubectl --namespace monitoring port-forward $POD_NAME 9090
  ```

1. [Open Prometheus](http://localhost:9090/graph), and see that metrics from Redpanda endpoints are scraped.

## Generate Grafana dashboard

<GenerateGrafanaDashboard frontmatter={frontMatter}/>

## Use Redpanda monitoring examples

<MonitoringExamples/>

## Monitor for performance and health

<MonitorForPerformance/>

### Redpanda architecture

<RedpandaArchitecture frontmatter={frontMatter}/>

### Infrastructure resources

<InfrastructureResources frontmatter={frontMatter}/>

### Throughput

<Throughput frontmatter={frontMatter}/>

### Latency

<Latency frontmatter={frontMatter}/>

### Partition health

<PartitionHealth frontmatter={frontMatter}/>

### Consumers

<Consumers frontmatter={frontMatter}/>

### Services

<Services/>

## References

<References frontmatter={frontMatter}/>
